--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
         <h1>Hello, world</h1>
+        <img src="{{ img }}", alt="IMAGE N/A"/> <br/><br/>
         This is MattyAyOh's web server.<br />
 
         <p><u>Form Submission via GET</u></p>
